--- a/css/style.css
+++ b/css/style.css
@@ -1305,9 +1305,27 @@ input#email_newsletter:-ms-input-placeholder { /* Internet Explorer 10+ */
 	vertical-align: text-top;
 }
 
+.btn-green {
+	font-family: 'Dosis', sans-serif;
+	font-size: 30px;
+	line-height: 22px;
+	font-weight: 600;
+	color: #fff;
+	background-color: #5B913B;
+    box-shadow: 0px 8px 40px 0 rgba(0, 0, 0, 0.37);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+    letter-spacing: 1px;
+	border-radius: 5px 5px;
+	margin: 10px 10px 0 10px 0;
+	padding: 20px 30px;
+	display: inline-block;
+	transition: all 0.4s ease-in-out;
+	-webkit-transition: all 0.4s ease-in-out;
+}
+
 .btn-blue {
 	font-family: 'Dosis', sans-serif;
-	font-size: 18px;
+	font-size: 30px;
 	line-height: 22px;
 	font-weight: 600;
 	color: #fff;
