--- a/css/style.css
+++ b/css/style.css
@@ -1798,3 +1798,77 @@ ul.partners-mentions li img:hover {
   	}
 
 }
+
+* {
+	box-sizing: border-box;
+  }
+  
+  /* Create three columns of equal width */
+  .columns {
+	float: left;
+	width: 33.3%;
+	padding: 8px;
+  }
+  
+  /* Style the list */
+  .price {
+	list-style-type: none;
+	border: 1px solid #eee;
+	margin: 0;
+	padding: 0;
+	-webkit-transition: 0.3s;
+	transition: 0.3s;
+  }
+  
+  /* Add shadows on hover */
+  .price:hover {
+	box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+  }
+  
+  /* Pricing header */
+  .price .header {
+	background-color: #C7DB9C;
+	color: #1A1A1D;
+	font-size: 40px;
+	font-weight: 800;
+  }
+
+   /* Pricing header For Pro Option */
+   .price .headerpro {
+	background-color: #FF6500;
+	color: #1A1A1D;
+	font-size: 40px;
+	font-weight: 800;
+  }
+  
+  /* List items */
+  .price li {
+	border-bottom: 1px solid #eee;
+	padding: 20px;
+	text-align: center;
+  }
+  
+  /* Grey list item */
+  .price .grey {
+	background-color: #eee;
+	font-size: 40px;
+  }
+  
+  /* The "Sign Up" button */
+  .button {
+	background-color: #04AA6D;
+	border: none;
+	color: white;
+	padding: 10px 25px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 18px;
+  }
+  
+  /* Change the width of the three columns to 100%
+  (to stack horizontally on small screens) */
+  @media only screen and (max-width: 600px) {
+	.columns {
+	  width: 100%;
+	}
+  }
